# engineer-challenge

./: Cargo.toml  README.md
business_logic/: Cargo.toml
business_logic/src/: entities.rs  lib.rs  operation.rs  workflow.rs
business_logic/src/entities/: account.rs  email.rs  password.rs  requests.rs  session.rs
grpc/: Cargo.toml  build.rs
grpc/proto/: auth_service.proto
grpc/src/: lib.rs
server_app/: Cargo.toml
server_app/src/: lib.rs  main.rs  services.rs  workflow_executor.rs
server_app/src/services/: auth.rs  email_sender.rs  storage.rs
server_app/tests/: auth_workflow_test.rs
server_app/tests/common/: mod.rs
